# pyproject.toml

# [build-system] Specifies the build backend and its requirements.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# [project] Contains metadata about the project.
[project]
name = "molecular diffusion"
version = "0.1.0"
# description = "A short description"
# readme = "README.md"
requires-python = ">=3.10"
# dependencies = ["numpy>=2.21"]


# [tool] Holds configuration for local and external tools.
# Here, it will look for local packages.
[tool.setuptools.packages.find]
where = ["moldiff"]
# include = ["moldiff"]

[tool.black]
line-length = 200

[tool.ruff]
line-length = 200
select = ["E","F","I","B"]
ignore = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
